# MCP_Crash_Course_Udemy

./: .gitignore  README.md
05-seccion_MCP_local/shellserver/: pyproject.toml  server.py
06-seccion_tool_connect_call/langchain-mcp-adapters/: langchain_client.py  main.py  pyproject.toml
06-seccion_tool_connect_call/langchain-mcp-adapters/servers/: weather_server.py
07-seccion_prompts/prompts/: main.py  pyproject.toml
07-seccion_prompts/resources/: main.py  pyproject.toml
